--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -6,18 +6,18 @@
 
     <fragment
         android:id="@+id/searchFragment"
-        android:name="com.ribsky.mayti.fragments.SearchFragment"
+        android:name="com.ribsky.mayti.ui.fragment.search.SearchFragment"
         android:label="SearchFragment" />
     <fragment
         android:id="@+id/profileFragment"
-        android:name="com.ribsky.mayti.fragments.ProfileFragment"
+        android:name="com.ribsky.mayti.ui.fragment.profile.ProfileFragment"
         android:label="ProfileFragment" />
     <fragment
         android:id="@+id/loadingFragment"
-        android:name="com.ribsky.mayti.fragments.LoadingFragment"
+        android:name="com.ribsky.mayti.ui.fragment.loading.LoadingFragment"
         android:label="LoadingFragment" />
     <fragment
         android:id="@+id/ratingFragment"
-        android:name="com.ribsky.mayti.fragments.RatingFragment"
+        android:name="com.ribsky.mayti.ui.fragment.rating.RatingFragment"
         android:label="RatingFragment" />
 </navigation>
