--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -79,6 +79,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:text="Лайков: 3"
+                android:fontFamily="@font/rubik_bold"
                 android:textAllCaps="false"
                 android:textColor="@color/black"
                 app:cornerRadius="16dp"
@@ -94,6 +95,7 @@
                 android:layout_alignBottom="@+id/materialButton"
                 android:layout_marginStart="8dp"
                 android:layout_marginLeft="8dp"
+                android:fontFamily="@font/rubik_bold"
                 android:layout_toEndOf="@+id/materialButton"
                 android:layout_toRightOf="@+id/materialButton"
                 android:text="+"
