--- a/app/src/main/res/layout/fragment_intro_1.xml
+++ b/app/src/main/res/layout/fragment_intro_1.xml
@@ -6,21 +6,21 @@
     android:background="@color/white">
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/introImage"
         android:layout_width="96dp"
         android:layout_height="96dp"
-        android:layout_above="@+id/textView"
+        android:layout_above="@+id/textViewHeader"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:src="@drawable/ic_launcher_playstore"
-        app:layout_constraintBottom_toTopOf="@+id/textView"
+        app:layout_constraintBottom_toTopOf="@+id/textViewHeader"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/textViewHeader"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@id/textView2"
+        android:layout_above="@id/textViewSub"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_marginStart="16dp"
@@ -29,11 +29,11 @@
         android:text="Привет, герой!"
         android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
         android:textColor="@color/black"
-        app:layout_constraintBottom_toTopOf="@+id/textView2"
+        app:layout_constraintBottom_toTopOf="@+id/textViewSub"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/textViewSub"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
@@ -55,13 +55,13 @@
         android:id="@+id/sign_in_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/textView2"
-        android:layout_alignStart="@+id/textView2"
-        android:layout_alignLeft="@+id/textView2"
+        android:layout_below="@+id/textViewSub"
+        android:layout_alignStart="@+id/textViewSub"
+        android:layout_alignLeft="@+id/textViewSub"
         android:layout_margin="16dp"
         app:buttonSize="wide"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toBottomOf="@+id/textViewSub" />
 
     <com.google.android.material.progressindicator.CircularProgressIndicator
         android:id="@+id/circularProgressIndicator"
@@ -79,7 +79,7 @@
         app:trackCornerRadius="8dp" />
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/textView4"
+        android:id="@+id/textViewPrivacy"
         style="@style/Widget.MaterialComponents.Button.OutlinedButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
