--- a/app/src/main/res/layout/fragment_intro_2.xml
+++ b/app/src/main/res/layout/fragment_intro_2.xml
@@ -15,13 +15,12 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fab"
+        android:id="@+id/buttonNext"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center|bottom"
         android:layout_margin="16dp"
         android:src="@drawable/ic_round_arrow_forward_24"
-        android:textAllCaps="false"
         app:backgroundTint="@color/white" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
