--- a/app/src/main/res/layout/fragment_rating.xml
+++ b/app/src/main/res/layout/fragment_rating.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycler_view"
+        android:id="@+id/recyclerView"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="56dp"
