--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent">
 
     <com.google.android.material.card.MaterialCardView
-        android:id="@+id/empty"
+        android:id="@+id/emptyState"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginStart="16dp"
@@ -24,20 +24,20 @@
             android:padding="16dp">
 
             <ImageView
-                android:id="@+id/imageView"
+                android:id="@+id/introImage"
                 android:layout_width="96dp"
                 android:layout_height="96dp"
-                android:layout_above="@+id/textView"
+                android:layout_above="@+id/textViewHeader"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentLeft="true"
                 android:layout_marginBottom="16dp"
                 android:src="@drawable/ic_launcher_playstore"
-                app:layout_constraintBottom_toTopOf="@+id/textView"
-                app:layout_constraintEnd_toEndOf="@+id/textView"
-                app:layout_constraintStart_toStartOf="@+id/textView" />
+                app:layout_constraintBottom_toTopOf="@+id/textViewHeader"
+                app:layout_constraintEnd_toEndOf="@+id/textViewHeader"
+                app:layout_constraintStart_toStartOf="@+id/textViewHeader" />
 
             <TextView
-                android:id="@+id/textView"
+                android:id="@+id/textViewHeader"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
@@ -49,13 +49,13 @@
                 android:textAlignment="center"
                 android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                 android:textColor="@color/black"
-                app:layout_constraintBottom_toTopOf="@+id/textView2"
+                app:layout_constraintBottom_toTopOf="@+id/textViewSub"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent" />
 
 
             <TextView
-                android:id="@+id/textView2"
+                android:id="@+id/textViewSub"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
@@ -69,12 +69,12 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView"
+                app:layout_constraintTop_toBottomOf="@+id/textViewHeader"
                 app:layout_constraintTop_toTopOf="parent" />
 
 
             <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
-                android:id="@+id/send"
+                android:id="@+id/btnRepeat"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="16dp"
@@ -94,7 +94,7 @@
     </com.google.android.material.card.MaterialCardView>
 
     <com.yuyakaido.android.cardstackview.CardStackView
-        android:id="@+id/card_stack_view"
+        android:id="@+id/cardStackView"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="56dp"
