--- a/app/src/main/res/layout/item_rating.xml
+++ b/app/src/main/res/layout/item_rating.xml
@@ -13,7 +13,7 @@
         android:background="@color/white">
 
         <ImageView
-            android:id="@+id/imageView2"
+            android:id="@+id/imageViewAvatar"
             android:layout_width="56dp"
             android:layout_height="56dp"
             android:layout_alignParentStart="true"
@@ -21,7 +21,7 @@
             android:src="@drawable/ic_launcher_playstore" />
 
         <TextView
-            android:id="@+id/title"
+            android:id="@+id/textViewName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
@@ -31,12 +31,13 @@
             android:layout_marginLeft="16dp"
             android:layout_marginEnd="16dp"
             android:layout_marginRight="16dp"
-            android:layout_toEndOf="@+id/imageView2"
-            android:layout_toRightOf="@+id/imageView2"
+            android:layout_toEndOf="@+id/imageViewAvatar"
+            android:layout_toRightOf="@+id/imageViewAvatar"
             android:fontFamily="@font/rubik_bold"
             android:text="TextView"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
-            app:layout_constraintStart_toEndOf="@+id/imageView2"
+            android:textSize="18sp"
+            app:layout_constraintStart_toEndOf="@+id/imageViewAvatar"
             app:layout_constraintTop_toTopOf="parent" />
 
     </RelativeLayout>
