--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -48,10 +48,11 @@
                 android:layout_alignParentLeft="true"
                 android:fontFamily="@font/rubik_light"
                 android:gravity="center"
-                android:textAlignment="center"
                 android:text="В этом тексте +- 150 символов В этом тексте ровно 150 символов В этом тексте ровн"
+                android:textAlignment="center"
                 android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                 android:textColor="@color/darkGray"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -122,10 +123,10 @@
             android:id="@+id/textViewName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
             android:fontFamily="@font/rubik_bold"
             android:gravity="center"
             android:text="Аккаунт создан"
-            android:layout_marginTop="16dp"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
             android:textColor="@color/black"
             app:layout_constraintEnd_toEndOf="parent"
